tests/my/bad/array002.lat
int main() {
  int[] arr = new int[10];
  for (int[] x: arr) {
  }
  return 0;
}
